--- a/ai_models.yaml
+++ b/ai_models.yaml
@@ -22,49 +22,65 @@ providers:
 
 models:
   gpt-oss:
-    provider: FREE
-    model: openai/gpt-oss-120b
+    providers:
+      - provider: FREE
+        model: openai/gpt-oss-120b
     match: ["default", "gpt-oss"]
+
   qwen-flash:
-    provider: DASHSCOPE
-    model: qwen-flash
+    providers:
+      - provider: DASHSCOPE
+        model: qwen-flash
 
   spark:
-    provider: ST
-    model: lite
+    providers:
+      - provider: ST
+        model: lite
     match: ["st", "spark"]
 
   gemini:
-    provider: GEMINI
-    model: gemini-2.5-flash
+    providers:
+      - provider: GEMINI
+        model: gemini-2.5-flash
     match: ["gemini", "google"]
 
   kimi:
-    provider: FREE
-    model: moonshotai/Kimi-K2-Instruct
+    providers:
+      - provider: FREE
+        model: moonshotai/Kimi-K2-Instruct
     match: ["kimi", "moonshot"]
 
-  qwen:
-    provider: FREE
-    model: tongyi-qwen3-max-model
+  qwen-max:
+    providers:
+      - provider: DASHSCOPE
+        model: qwen-max
+      - provider: IFLOW
+        model: qwen3-max
+      - provider: FREE
+        model: tongyi-qwen3-max-model
     match: ["qwen"]
-  
+    match: ["qwen", "qwen-max", "qwen3-max"]
+
   glm:
-    provider: FREE
-    model: zai-org/GLM-4.5
+    providers:
+      - provider: FREE
+        model: zai-org/GLM-4.5
     match: ["glm"]
 
   gpt:
-    provider: CHAT
-    model: gpt-5-mini
+    providers:
+      - provider: CHAT
+        model: gpt-5-mini
     match: ["gpt", "chatgpt"]
 
   gpt-4o-mini:
-    provider: CHAT
-    model: gpt-4o-mini
+    providers:
+      - provider: CHAT
+        model: gpt-4o-mini
     match: ["gpt-4o-mini"]
 
   deepseek:
-    provider: CHAT
-    model: deepseek-v3
+    providers:
+      - provider: CHAT
+        model: deepseek-v3
     match: ["deepseek", "ds"]
